# search-algorithms-monoid

./: .gitignore  LICENSE  Makefile  cabal.project  flake.nix  search-algorithms.cabal
bench/: bench.hs
src/Algorithm/: Search.hs
src/Algorithm/Search/: Monoid.hs
test/Algorithm/: SearchSpec.hs
test/Algorithm/Search/: MonoidSpec.hs
