name:               search-algorithms-monoid
version:            0.3.2
synopsis:           Common graph search algorithms, generalized
description:
  Library containing common graph search algorithms,
  including depth-first and breadth-first searches,
  Dijkstra's algorithm, and A*, generalized to operate
  on monoids.

homepage:           https://github.com/t4ccer/search-algorithms-monoid#readme
license:            BSD3
license-file:       LICENSE
author:             Tomasz Maciosowski <t4ccer>
maintainer:         t4ccer@gmail.com
copyright:          2017 Devon Hollowood
category:           Algorithm
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

cabal-version:      >=1.10

library
  hs-source-dirs:   src
  exposed-modules:  Algorithm.Search.Monoid
  build-depends:
      base        >=4.7 && <5
    , containers  >=0.5 && <0.7

  ghc-options:      -Wall
  default-language: Haskell2010

test-suite search-algorithms-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Algorithm.Search.MonoidSpec
  build-depends:
      base
    , containers         >=0.5
    , hspec              >=2.2
    , search-algorithms-monoid

  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

benchmark search-algorithms-benchmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          bench.hs
  build-depends:
      base
    , criterion
    , search-algorithms-monoid

  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/t4ccer/search-algorithms-monoid
